Removed isBlank() to preserve Java 1.8 compatibility